--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,10 @@
-Core Data Model: 
+###Core Data Model: 
 
 Product 
 Order
   -- OrderItem 
 User(admin, user)
+
 Cart - session based model: not persisted in the database, but in the session variable. 
   -- CartItem
   
